Conception navbar et hero

--- a/public/index.html
+++ b/public/index.html
@@ -6,27 +6,71 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>CheckpointTailWindCSS</title>
     <link rel="stylesheet" href="./css/app.css">
+    <link rel="preconnect" href="https://fonts.googleapis.com">
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+    <link
+        href="https://fonts.googleapis.com/css2?family=Madimi+One&family=Poppins:wght@100;200;300;400;500;600&family=Sonsie+One&display=swap"
+        rel="stylesheet">
+    <!-- <script src="https://cdn.tailwindcss.com"></script> -->
+
 </head>
 
-<body class="bg-gray-300">
-    <div class="container mx-auto px-4">
-        <header class="">
-            <nav>
-                <div class="logo"><span>Isidore</span> Mbairassem</div>
+<body>
 
-                <div class="menu">
-                    <ul>
-                        <li><a href="#">Accueil</a></li>
-                        <li><a href="#">Projets</a></li>
-                        <li><a href="#">Contact</a></li>
-                    </ul>
-                </div>
-            </nav>
+    <header class="bg-white z-50 fixed top-0 w-full shadow">
+        <nav id="main-nav" class="bg-white max-w-5xl mx-auto font-poppins p-6 flex items-center justify-between">
+            <a href="" class="flex" aria-label="Page d'accueil du portfolio">
+                <img src="images/logo.png" alt="" class="hidden md:w-36 md:h-16 md:inline md:mr-4">
+                <span aria-hidden="true" class="text-lg lg:text-xl py-5">
+                    Mbai<strong><span class="text-blue-800">Rassem</span></strong>
+                </span>
+            </a>
+            <button aria-label="toggle button" aria-expanded="false" id="menu-btn" class="cursor-pointer w-7 md:hidden">
+                <img src="images/menu.svg" alt="">
+            </button>
+
+            <ul id="toggled-menu"
+                class="w-full absolute top-full left-0 -translate-y-full -z-10 text-gray-800 border-b border-gray-200 flex flex-col items-center md:static md:z-10 md:w-min md:transform-none md:border-none md:flex-row">
+                <li class="py-4 md:py-0 md:mr-6"><a href="/"
+                        class="text-sm uppercase font-semibold w-full hover:text-blue-200">Accueil</a>
+                </li>
+
+                <li class="py-4 md:py-0 md:mr-6"><a href="#cv"
+                        class="text-sm uppercase font-semibold w-full hover:text-blue-200">CV</a>
+                </li>
+
+                <li class="py-4 md:py-0 md:mr-6"><a href="#projets"
+                        class="text-sm uppercase font-semibold w-full hover:text-blue-200">Projets</a>
+                </li>
+                <li class="py-4 md:py-0 md:mr-6"><a href="#contact"
+                        class="text-sm uppercase font-semibold w-full hover:text-blue-200">Contact</a>
+                </li>
+            </ul>
+            <!-- <div class="menu_1"></div> -->
+        </nav>
 
 
-        </header>
+    </header>
 
-    </div>
+    <section class="pt-10 bg-slate-100">
+        <div class="pt-10 grid lg:grid-cols-2 items-center justify-items-center gap-4">
+            <div class="mx-5 pt-11 flex flex-col justify-center items-center">
+
+                <p class="w-full text-center text-4xl font-bold">Je suis</p>
+                <p class="w-full text-center text-7xl font-bold">Mbairassem Isidore</p>
+                <p class="mt-2 text-center text-2xl font-bold">Developpeur FullStack</p>
+                <!-- <div class=""></div> -->
+            </div>
+            <div class="pt-10">
+                <img class="h-80 w-60 object-fill md:w-[400px] md:h-[500px]" src=" ./images/imagepersonnel.png" alt="">
+            </div>
+
+        </div>
+
+    </section>
+
+    <script src="./js/script.js"></script>
+    <!-- <div class="container mx-auto max-w-7xl "> </div> -->
 
 </body>
 
