--- a/public/index.html
+++ b/public/index.html
@@ -6,23 +6,23 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>CheckpointTailWindCSS</title>
     <link rel="stylesheet" href="./css/app.css">
-    <link rel="preconnect" href="https://fonts.googleapis.com">
-    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
-    <link
+    <!-- <link rel="preconnect" href="https://fonts.googleapis.com"> -->
+    <!-- <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin> -->
+    <!-- <link
         href="https://fonts.googleapis.com/css2?family=Madimi+One&family=Poppins:wght@100;200;300;400;500;600&family=Sonsie+One&display=swap"
-        rel="stylesheet">
-    <!-- <script src="https://cdn.tailwindcss.com"></script> -->
+        rel="stylesheet"> -->
+    <script src="https://cdn.tailwindcss.com"></script>
 
 </head>
 
-<body>
+<body class="h-screen bg-gray-100">
 
     <header class="bg-white z-50 fixed top-0 w-full shadow">
         <nav id="main-nav" class="bg-white max-w-5xl mx-auto font-poppins p-6 flex items-center justify-between">
             <a href="" class="flex" aria-label="Page d'accueil du portfolio">
                 <img src="images/logo.png" alt="" class="hidden md:w-36 md:h-16 md:inline md:mr-4">
-                <span aria-hidden="true" class="text-lg lg:text-xl py-5">
-                    Mbai<strong><span class="text-blue-800">Rassem</span></strong>
+                <span aria-hidden="true" class="text-lg lg:text-xl py-5 font-mono">
+                    Aktib<strong><span class="text-blue-800">Code</span></strong>
                 </span>
             </a>
             <button aria-label="toggle button" aria-expanded="false" id="menu-btn" class="cursor-pointer w-7 md:hidden">
@@ -30,20 +30,20 @@
             </button>
 
             <ul id="toggled-menu"
-                class="w-full absolute top-full left-0 -translate-y-full -z-10 text-gray-800 border-b border-gray-200 flex flex-col items-center md:static md:z-10 md:w-min md:transform-none md:border-none md:flex-row">
-                <li class="py-4 md:py-0 md:mr-6"><a href="/"
-                        class="text-sm uppercase font-semibold w-full hover:text-blue-200">Accueil</a>
+                class="md:bg-white text-center bg-blue-200 w-full absolute top-full left-0 -translate-y-full -z-10 text-gray-800 border-b border-gray-200 flex flex-col items-center md:static md:z-10 md:w-min md:transform-none md:border-none md:flex-row">
+                <li class="shadow w-[100%] px-5 py-4 md:py-0 md:mr-3"><a href="/"
+                        class="text-base/8 uppercase font-semibold w-full hover:text-blue-700">Accueil</a>
                 </li>
 
-                <li class="py-4 md:py-0 md:mr-6"><a href="#cv"
-                        class="text-sm uppercase font-semibold w-full hover:text-blue-200">CV</a>
+                <li class="shadow w-[100%] px-5 py-4 md:py-0 md:mr-3"><a href="#cv"
+                        class="text-base/8 uppercase font-semibold w-full hover:text-blue-700">CV</a>
                 </li>
 
-                <li class="py-4 md:py-0 md:mr-6"><a href="#projets"
-                        class="text-sm uppercase font-semibold w-full hover:text-blue-200">Projets</a>
+                <li class="shadow w-[100%] px-5 py-4 md:py-0 md:mr-3"><a href="#projets"
+                        class="text-base/8 uppercase font-semibold w-full hover:text-blue-700">Projets</a>
                 </li>
-                <li class="py-4 md:py-0 md:mr-6"><a href="#contact"
-                        class="text-sm uppercase font-semibold w-full hover:text-blue-200">Contact</a>
+                <li class="shadow w-[100%] px-5 py-4 md:py-0 md:mr-3"><a href="#contact"
+                        class="text-base/8 uppercase font-semibold w-full hover:text-blue-700">Contact</a>
                 </li>
             </ul>
             <!-- <div class="menu_1"></div> -->
@@ -52,22 +52,221 @@
 
     </header>
 
-    <section class="pt-10 bg-slate-100">
-        <div class="pt-10 grid lg:grid-cols-2 items-center justify-items-center gap-4">
-            <div class="mx-5 pt-11 flex flex-col justify-center items-center">
 
-                <p class="w-full text-center text-4xl font-bold">Je suis</p>
-                <p class="w-full text-center text-7xl font-bold">Mbairassem Isidore</p>
-                <p class="mt-2 text-center text-2xl font-bold">Developpeur FullStack</p>
-                <!-- <div class=""></div> -->
-            </div>
-            <div class="pt-10">
-                <img class="h-80 w-60 object-fill md:w-[400px] md:h-[500px]" src=" ./images/imagepersonnel.png" alt="">
-            </div>
+    <!-- cv section -->
+    <section id="cv" class="bg-slate-100 pt-11 md:border md:border-gray-100 md:shadow">
+        <div class="container md:mx-auto px-4 mx-0 sm:mx-auto">
+            <div class="pt-10 grid lg:grid-cols-2 items-center justify-items-center gap-4 sm:gap-0">
+                <div class="mx-5 pt-11 flex flex-col justify-center items-center">
 
+                    <p class="text-gray-700 md:w-full text-center md:text-4xl font-bold font-serif">Je suis</p>
+                    <p class="text-gray-700 md:w-full text-center md:text-7xl font-bold font-serif ">Mbairassem Isidore
+                    </p>
+                    <p class="text-blue-800 mt-2 text-center text-2xl font-bold">Developpeur FullStack</p>
+                    <a id="#cv"
+                        class="inline-flex items-baseline m-5 p-3 rounded transition ease-in-out delay-150 bg-blue-100 hover:-translate-y-1 hover:scale-110 text-gray-700 font-semibold border hover:bg-indigo-500 duration-300 ..."
+                        href="#">
+                        Télécharger mon CV ici
+                    </a>
+                    <!-- <div class=""></div> -->
+                </div>
+                <div class="pt-10">
+                    <img class="h-80 w-60 md:w-[200px] md:h-[300px] brightness-200 object-fill "
+                        src=" ./images/imagepersonnel.png" alt="">
+                </div>
+
+            </div>
         </div>
-
     </section>
+
+
+    <section id="projets" class="container mx-auto bg-gray-50 py-11 mt-1">
+        <div class="flex flex-col justify-center items-center">
+            <div class="flex flex-col justify-center items-center">
+                <p class="w-full text-center text-3xl font-bold font-serif text-gray-600">Projets</p>
+            </div>
+            <div class="flex flex-wrap  justify-center">
+                <div class="p-4 sm:w-1/2 lg:w-1/3">
+                    <div class="h-full border-2 border-gray-200 border-opacity-60 rounded-lg overflow-hidden">
+                        <img class="lg:h-72 md:h-48 h-40 w-full object-cover object-center" src="./images/HTML5.png"
+                            alt="blog">
+                        <div class="p-6 hover:bg-indigo-700 hover:text-white transition duration-300 ease-in">
+                            <h2 class="text-base font-medium text-indigo-300 mb-1">Aout 29,
+                                2024</h2>
+                            <h1 class="text-2xl font-semibold mb-3">HTML</h1>
+                            <p class="leading-relaxed mb-3">Projet sur la conception d'un site responsive à partir de
+                                outils Open Sources. J'espère que ce projet me permettrais d'acquerir des comptences .
+                            </p>
+                            <div class="flex items-center flex-wrap ">
+                                <a class="text-indigo-300 inline-flex items-center md:mb-2 lg:mb-0">Parcourir
+                                    <svg class="w-4 h-4 ml-2" viewBox="0 0 24 24" stroke="currentColor" stroke-width="2"
+                                        fill="none" stroke-linecap="round" stroke-linejoin="round">
+                                        <path d="M5 12h14"></path>
+                                        <path d="M12 5l7 7-7 7"></path>
+                                    </svg>
+                                </a>
+                                <span
+                                    class="text-gray-400 mr-3 inline-flex items-center lg:ml-auto md:ml-0 ml-auto leading-none text-sm pr-3 py-1 border-r-2 border-gray-200">
+                                    <svg class="w-4 h-4 mr-1" stroke="currentColor" stroke-width="2" fill="none"
+                                        stroke-linecap="round" stroke-linejoin="round" viewBox="0 0 24 24">
+                                        <path d="M1 12s4-8 11-8 11 8 11 8-4 8-11 8-11-8-11-8z"></path>
+                                        <circle cx="12" cy="12" r="3"></circle>
+                                    </svg>1.2K
+                                </span>
+                                <span class="text-gray-400 inline-flex items-center leading-none text-sm">
+                                    <svg class="w-4 h-4 mr-1" stroke="currentColor" stroke-width="2" fill="none"
+                                        stroke-linecap="round" stroke-linejoin="round" viewBox="0 0 24 24">
+                                        <path
+                                            d="M21 11.5a8.38 8.38 0 01-.9 3.8 8.5 8.5 0 01-7.6 4.7 8.38 8.38 0 01-3.8-.9L3 21l1.9-5.7a8.38 8.38 0 01-.9-3.8 8.5 8.5 0 014.7-7.6 8.38 8.38 0 013.8-.9h.5a8.48 8.48 0 018 8v.5z">
+                                        </path>
+                                    </svg>6
+                                </span>
+                            </div>
+                        </div>
+                    </div>
+                </div>
+
+                <div class="p-4 sm:w-1/2 lg:w-1/3">
+                    <div class="h-full border-2 border-gray-200 border-opacity-60 rounded-lg overflow-hidden">
+                        <img class="lg:h-72 md:h-48 h-40 w-full object-cover object-center" src="./images/CSS.png"
+                            alt="blog">
+                        <div class="p-6 hover:bg-indigo-700 hover:text-white transition duration-300 ease-in">
+                            <h2 class="text-base font-medium text-indigo-300 mb-1">Aout 29,
+                                2024</h2>
+                            <h1 class="text-2xl font-semibold mb-3">CSS</h1>
+                            <p class="leading-relaxed mb-3">Projet sur la conception d'un site responsive à partir de
+                                outils Open Sources. J'espère que ce projet me permettrais d'acquerir des comptences .
+                            </p>
+                            <div class="flex items-center flex-wrap ">
+                                <a class="text-indigo-300 inline-flex items-center md:mb-2 lg:mb-0">Parcourir
+                                    <svg class="w-4 h-4 ml-2" viewBox="0 0 24 24" stroke="currentColor" stroke-width="2"
+                                        fill="none" stroke-linecap="round" stroke-linejoin="round">
+                                        <path d="M5 12h14"></path>
+                                        <path d="M12 5l7 7-7 7"></path>
+                                    </svg>
+                                </a>
+                                <span
+                                    class="text-gray-400 mr-3 inline-flex items-center lg:ml-auto md:ml-0 ml-auto leading-none text-sm pr-3 py-1 border-r-2 border-gray-200">
+                                    <svg class="w-4 h-4 mr-1" stroke="currentColor" stroke-width="2" fill="none"
+                                        stroke-linecap="round" stroke-linejoin="round" viewBox="0 0 24 24">
+                                        <path d="M1 12s4-8 11-8 11 8 11 8-4 8-11 8-11-8-11-8z"></path>
+                                        <circle cx="12" cy="12" r="3"></circle>
+                                    </svg>1.2K
+                                </span>
+                                <span class="text-gray-400 inline-flex items-center leading-none text-sm">
+                                    <svg class="w-4 h-4 mr-1" stroke="currentColor" stroke-width="2" fill="none"
+                                        stroke-linecap="round" stroke-linejoin="round" viewBox="0 0 24 24">
+                                        <path
+                                            d="M21 11.5a8.38 8.38 0 01-.9 3.8 8.5 8.5 0 01-7.6 4.7 8.38 8.38 0 01-3.8-.9L3 21l1.9-5.7a8.38 8.38 0 01-.9-3.8 8.5 8.5 0 014.7-7.6 8.38 8.38 0 013.8-.9h.5a8.48 8.48 0 018 8v.5z">
+                                        </path>
+                                    </svg>6
+                                </span>
+                            </div>
+                        </div>
+                    </div>
+                </div>
+
+                <div class="p-4 sm:w-1/2 lg:w-1/3">
+                    <div class="h-full border-2 border-gray-200 border-opacity-60 rounded-lg overflow-hidden">
+                        <img class="lg:h-72 md:h-48 h-40 w-full object-cover object-center" src="./images/JS.png"
+                            alt="blog">
+                        <div class="p-6 hover:bg-indigo-700 hover:text-white transition duration-300 ease-in">
+                            <h2 class="text-base font-medium text-indigo-300 mb-1">Aout 29,
+                                2024</h2>
+                            <h1 class="text-2xl font-semibold mb-3">JS</h1>
+                            <p class="leading-relaxed mb-3">Projet sur la conception d'un site responsive à partir de
+                                outils Open Sources. J'espère que ce projet me permettrais d'acquerir des comptences .
+                            </p>
+                            <div class="flex items-center flex-wrap ">
+                                <a class="text-indigo-300 inline-flex items-center md:mb-2 lg:mb-0">Parcourir
+                                    <svg class="w-4 h-4 ml-2" viewBox="0 0 24 24" stroke="currentColor" stroke-width="2"
+                                        fill="none" stroke-linecap="round" stroke-linejoin="round">
+                                        <path d="M5 12h14"></path>
+                                        <path d="M12 5l7 7-7 7"></path>
+                                    </svg>
+                                </a>
+                                <span
+                                    class="text-gray-400 mr-3 inline-flex items-center lg:ml-auto md:ml-0 ml-auto leading-none text-sm pr-3 py-1 border-r-2 border-gray-200">
+                                    <svg class="w-4 h-4 mr-1" stroke="currentColor" stroke-width="2" fill="none"
+                                        stroke-linecap="round" stroke-linejoin="round" viewBox="0 0 24 24">
+                                        <path d="M1 12s4-8 11-8 11 8 11 8-4 8-11 8-11-8-11-8z"></path>
+                                        <circle cx="12" cy="12" r="3"></circle>
+                                    </svg>1.2K
+                                </span>
+                                <span class="text-gray-400 inline-flex items-center leading-none text-sm">
+                                    <svg class="w-4 h-4 mr-1" stroke="currentColor" stroke-width="2" fill="none"
+                                        stroke-linecap="round" stroke-linejoin="round" viewBox="0 0 24 24">
+                                        <path
+                                            d="M21 11.5a8.38 8.38 0 01-.9 3.8 8.5 8.5 0 01-7.6 4.7 8.38 8.38 0 01-3.8-.9L3 21l1.9-5.7a8.38 8.38 0 01-.9-3.8 8.5 8.5 0 014.7-7.6 8.38 8.38 0 013.8-.9h.5a8.48 8.48 0 018 8v.5z">
+                                        </path>
+                                    </svg>6
+                                </span>
+                            </div>
+                        </div>
+                    </div>
+                </div>
+
+            </div>
+    </section>
+
+
+    <!-- contact section  -->
+    <section class=" dark:bg-gray-900">
+        <div class="container mx-auto py-10">
+            <div class="py-2 lg:py-16 bg-white">
+                <h2 class="mb-4 text-4xl tracking-tight font-extrabold text-center text-gray-900 dark:text-white">
+                    CONTACT MOI
+                </h2>
+                <p class="mb-8 lg:mb-16 font-light text-center text-gray-500 dark:text-gray-400 sm:text-xl">Pour avoir
+                    une discussion sur les possibilités de progresser .</p>
+                <form action="#" class="space-y-4 w-80 mx-auto m-10 py-10 ">
+                    <div class="w-50">
+                        <label for="email" class="block mb-2 text-sm font-medium text-gray-900 dark:text-gray-300">Votre
+                            mail :</label>
+                        <input type="email" id="email"
+                            class="shadow-sm bg-gray-50 border border-gray-300 text-gray-900 text-sm rounded-lg focus:ring-primary-500 focus:border-primary-500 block w-full p-2.5 dark:bg-gray-700 dark:border-gray-600 dark:placeholder-gray-400 dark:text-white dark:focus:ring-primary-500 dark:focus:border-primary-500 dark:shadow-sm-light"
+                            placeholder="name@flowbite.com" required>
+                    </div>
+                    <div>
+                        <label for="subject"
+                            class="block mb-2 text-sm font-medium text-gray-900 dark:text-gray-300">Objet :</label>
+                        <input type="text" id="subject"
+                            class="block p-3 w-full text-sm text-gray-900 bg-gray-50 rounded-lg border border-gray-300 shadow-sm focus:ring-primary-500 focus:border-primary-500 dark:bg-gray-700 dark:border-gray-600 dark:placeholder-gray-400 dark:text-white dark:focus:ring-primary-500 dark:focus:border-primary-500 dark:shadow-sm-light"
+                            placeholder="Let us know how we can help you" required>
+                    </div>
+                    <div class="sm:col-span-2">
+                        <label for="message"
+                            class="block mb-2 text-sm font-medium text-gray-900 dark:text-gray-400">Votre Message
+                            :</label>
+                        <textarea id="message" rows="6"
+                            class="block p-2.5 w-full text-sm text-gray-900 bg-gray-50 rounded-lg shadow-sm border border-gray-300 focus:ring-primary-500 focus:border-primary-500 dark:bg-gray-700 dark:border-gray-600 dark:placeholder-gray-400 dark:text-white dark:focus:ring-primary-500 dark:focus:border-primary-500"
+                            placeholder="Leave a comment..."></textarea>
+                    </div>
+                    <button type="submit"
+                        class="border border-gray-500 bg-blue-400 py-3 px-5 text-sm font-medium text-center text-white rounded ">Send
+                        message</button>
+                </form>
+            </div>
+        </div>
+    </section>
+
+    <!-- fin contact section  -->
+
+
+    <!-- debut footer  -->
+
+    <footer class="bg-slate-400 py-8 font-[sans-serif]">
+        <div class="px-12 md:flex md:justify-between md:items-center max-md:text-center">
+            <div class="space-y-2">
+                <p class="text-gray-900 text-base">Contact Us:</p>
+                <p class="text-gray-900 text-base">Phone: 123-456-7890</p>
+                <p class="text-gray-900 text-base">Email: info@example.com</p>
+            </div>
+            <p class='text-gray-900 text-base max-md:mt-4'>Copyright © 2023</p>
+        </div>
+    </footer>
+
+    <!-- fin footer  -->
 
     <script src="./js/script.js"></script>
     <!-- <div class="container mx-auto max-w-7xl "> </div> -->
